--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,188 @@
 body {
+  width: auto;
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background: #eee;
+  color: #111;
+
+}
+body * {
+  transition: all 0.300s ease-in-out;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.App {
+  background-color: #fff;
+  width: auto;
+  max-width: 1500px;
+  margin: 0 auto;
+  -webkit-box-shadow: 0px 10px 54px -11px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 10px 54px -11px rgba(0,0,0,0.75);
+box-shadow: 0px 10px 54px -11px rgba(0,0,0,0.75);
 }
+
+/*------------- NAVIGATION BAR -------------------*/
+
+nav {
+  position: fixed;
+  z-index: 99;
+  background: black;
+  width: 100%;
+
+  margin: 0 auto;  
+  padding: 5px 0;
+
+  grid-template-columns: 2fr 1fr;
+  -webkit-box-shadow: 0px 10px 54px -11px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 10px 54px -11px rgba(0,0,0,0.75);
+box-shadow: 0px 10px 54px -11px rgba(0,0,0,0.75);
+}
+
+nav h2 {
+  color: dimgray;
+}
+
+nav ul {
+  width: 100%;
+  display: grid;
+  list-style: none;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+}
+
+
+nav ul:first-of-type{
+  grid-template-columns: 1fr;
+}
+nav ul:first-of-type li{
+  font-size: 1.4rem;
+  font-weight: bold;
+  text-indent: 30px;
+  color: white;
+}
+nav ul:first-of-type li span {
+  font-weight: 500;
+  color: lightseagreen;
+}
+
+nav ul:last-of-type{
+  grid-template-columns: repeat(3, 1fr);
+
+}
+
+
+nav ul li a{
+  color:white;
+  text-decoration: none; 
+  font-weight: bold;
+  display: block;
+
+}
+
+
+/*------------- HEADER -------------------*/
+
+header {
+  background: url("./images/cvvv.png");
+  background-size: 100%;
+  height: 625px;
+  background-position: center;
+  position: relative;
+ 
+}
+
+header div.head {
+  position: relative;
+  z-index: 2;
+  display: grid;
+  width: 70%;
+  grid-template-columns: repeat(2,1fr);
+  margin: 0 auto;
+  padding-top: 12%;
+  align-items: center;
+  
+}
+
+header div.head  {
+  color: #222;
+
+}
+
+{/* vertikal linje */}
+header div.head h1 {
+  font-size: 5rem;
+  font-weight: bold;
+  padding-top: 0px;
+  margin: 0;
+  letter-spacing: 4px;
+  border-right: 2px solid #111;
+}
+
+header div.head p {
+  margin: 18px;
+  padding: 15px;
+  font-style: italic;
+  padding-left: 10px;
+  color: black;
+  font-size: 18px;
+  width: 355px;
+  font-weight: bold;
+  height: 125px;
+  background-color: #ffffff;
+  border: 1px solid black;
+  opacity: 0.6;
+
+}
+
+.login {
+ background: ghostwhite;
+ display: block;
+ color: black;
+ font-weight: bold;
+ width: 50%;
+ margin: 50px;
+ text-align: center;
+ padding: 17px;
+ border-radius: 10px;
+ text-decoration: none;
+ -webkit-box-shadow: 0px 10px 54px -11px rgba(0,0,0,0.75);
+ -moz-box-shadow: 0px 10px 54px -11px rgba(0,0,0,0.75);
+ box-shadow: 0px 10px 54px -6px rgba(0,0,0,1);
+  opacity: 0.7;
+  transition: 0.3s;
+}
+
+.login:hover {
+  opacity: 20;
+}
+
+
+footer {
+  background:black;
+  padding: 30px;
+  display: grid;
+  align-items: center;
+  text-align: center;
+ 
+}
+
+footer ul {
+
+  list-style: none;
+  display: grid;
+  justify-items: center;
+}
+
+footer ul:first-of-type li{
+  font-size: 1.4rem;
+  font-weight: bold;
+  text-indent: 30px;
+  color: white;
+}
+footer ul:first-of-type li span {
+  font-weight: 500;
+  color: lightseagreen;
+}
+
+
+
