--- a/src/index.css
+++ b/src/index.css
@@ -27,8 +27,9 @@ nav {
   z-index: 99;
   background: black;
   width: 100%;
+  height: 70px;
 
-  margin: 0 auto;  
+  margin: 0 auto;
   padding: 5px 0;
 
   grid-template-columns: 2fr 1fr;
@@ -97,7 +98,7 @@ landingpage div.head {
   width: 70%;
   grid-template-columns: repeat(2,1fr);
   margin: 0 auto;
-  padding-top: 12%;
+  padding-top: 10%;
   align-items: center;
   
 }
@@ -112,14 +113,19 @@ landingpage div.head h1 {
   font-size: 5rem;
   font-weight: bold;
   height: 360px;
+  margin-bottom: 10%;
+  margin-top: -4%;
   padding-top: -1px;
-  margin: 0;
   letter-spacing: 4px;
   border-right: 2px solid #111;
 }
 
 landingpage .last-word{
   color: lightseagreen;
+}
+
+landingpage .ittext {
+  margin: 170px;
 }
 
 
@@ -137,6 +143,12 @@ landingpage div.head p {
   opacity: 0.6;
 
 }
+.centeritem{
+  position: center;
+  align-content: center;
+  margin-left: 150px;
+}
+
 
 .login {
  display: block;
