--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,10 @@ body * {
   transition: all 0.300s ease-in-out;
 }
 
+.container{
+  height: 100%;
+}
+
 .App {
   text-align:center;
   background-color: #fff;
