--- a/src/index.css
+++ b/src/index.css
@@ -189,7 +189,11 @@ footer {
   display: grid;
   align-items: center;
   text-align: center;
- 
+  position:fixed;
+  left:0px;
+  bottom:0px;
+  width:100%;
+
 }
 
 footer ul {
