layout+ cancel buttons

--- a/src/index.css
+++ b/src/index.css
@@ -237,3 +237,13 @@ footer ul:first-of-type li span {
   padding: 25px;
   margin-left: 80%;
 }
+
+.saveButton{
+  width: 96%;
+  margin-left: 15px;
+}
+
+.pdfButton{
+
+
+}
